kubernetes/apps/uptime-kuma/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: apps
spec:
  parentRefs:
    - name: homeserver-gateway
      namespace: infra
  hostnames:
    - "uptime-kuma.k8s.local"
    - "status.k8s.local"
  rules:
    - backendRefs:
        - name: uptime-kuma
          port: 3001
